@@ -5,6 +5,9 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
       Moab correctly reads memory info.
   e - Specifying size, nodes, and mppwidth and all mutually exclusize, so reject
       job submissions that attempt to specify more than one of these. TRQ-1185.
+  b - Merged changes for revision 7000 by hand because the merge was not clean. This
+      fixes problems with a deadlock when doing job dependencies using synccount/syncwith.
+      TRQ-1374
 
 4.1.3
   b - fix a security loophole that potentially allowed an interactive job to run 
